--- a/main.scss
+++ b/main.scss
@@ -25,57 +25,59 @@ $secondFont: 'Roboto', sans-serif;
     margin-top: 40px;
 }
 
+.navbar {
+    & {
+        background: white;
+        position: sticky;
+    }
+    
+        &::after {
+            content: "";
+            position: absolute;  
+            bottom: 0;
+            left: 0;
+            right: 0;  
+            width: 100vw;  
+            display: block;
+            border-top: 1px solid #3c9283;
+        }
+    
+    &__logo {
+        margin: 10px;
+    }  
+}
+
 .greeting {
     min-height: 100vh;
     background-image: url(images/mountains.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
-        &__main {
-            background: white;
-            position: sticky;
-        }
+    &::after {
+        content: "";
+        position: absolute;  
+        bottom: 0;
+        right: 0;  
+        width: 187px;
+        height: 201px;
+        display: block;
+        background-image: url(images/Marta.png);         
+    } 
 
-            &__main::after {
-                content: "";
-                position: absolute;  
-                bottom: 0;
-                left: 0;
-                right: 0;  
-                width: 100vw;  
-                display: block;
-                border-top: 1px solid #3c9283;
-            }
-
-        &__logo {
-            margin: 10px;
-        }   
+    &::before {
+        content: "";
+        position: absolute;  
+        bottom: 0;
+        left: 0;  
+        width: 186px;
+        height: 129px;
+        display: block;
+        background-image: url(images/logoBig.png);         
+    }       
 
         &__text {
             margin: 20px;
-        }
-
-            &__text::after {
-                content: "";
-                position: absolute;  
-                bottom: 0;
-                right: 0;  
-                width: 187px;
-                height: 201px;
-                display: block;
-                background-image: url(images/Marta.png);         
-            } 
-
-            &__text::before {
-                content: "";
-                position: absolute;  
-                bottom: 0;
-                left: 0;  
-                width: 186px;
-                height: 129px;
-                display: block;
-                background-image: url(images/logoBig.png);         
-            }   
+        }           
 }
 
 .introduction {
@@ -103,15 +105,19 @@ $secondFont: 'Roboto', sans-serif;
     }
 
     &__readMore {
-        position: absolute;
-        right: 20px;
+        text-align: right;
+        width: auto;
         font-family: $firstFont;
         font-size: 0.9rem;
+        padding: 5px;
     } 
 }
 
 .fields { 
     position: relative;
+    padding: 20px 0;
+    color: #f7f7f7;
+
     &::after {
         content: "";
         position: absolute;  
@@ -125,9 +131,8 @@ $secondFont: 'Roboto', sans-serif;
         min-height: 100vh;
         z-index: -1;
     }
-    &__text {
-        margin: 20px;
-        color: #f7f7f7;
+    &__header {
+        margin-left: 20px;
     }
     &__content {
         padding: 0;
@@ -156,12 +161,14 @@ $secondFont: 'Roboto', sans-serif;
             display: block;
             border-top: 1px solid #3c9283;
         }
+    &__icon {
+        max-width: 180px;
+    }    
 }
 
 .strengths{
-    &__text {
-        margin: 20px;
-    }
+    margin: 20px;
+    
     &__content {
         padding: 0;
     }
@@ -173,7 +180,7 @@ $secondFont: 'Roboto', sans-serif;
     }
     &__name {
         font-family: $secondFont;
-        line-height: 29.2px;
+        line-height: 22.2px;
         letter-spacing: 4.75px; 
         position: relative;
     }
@@ -194,6 +201,9 @@ $secondFont: 'Roboto', sans-serif;
         margin-top: 40px;
         letter-spacing: 0.34px;
     }    
+    &__icon {
+        max-width: 180px;
+    }   
 }
 
 .contact {
@@ -213,6 +223,8 @@ $secondFont: 'Roboto', sans-serif;
     }
         &__content {
             margin-top: 40px;
+            padding: 0;
+            margin-bottom: 0;
         }
         &__header {
             margin-left: 20px;
@@ -222,6 +234,7 @@ $secondFont: 'Roboto', sans-serif;
             text-align: center;
             margin-top: 60px;
             margin-bottom: 40px;
+            list-style: none;
         }
         &__data {
             font-family: $firstFont;
