--- a/main.css
+++ b/main.css
@@ -1,29 +1,30 @@
 .header {
   font-family: schnebel-sans-me, sans-serif;
-  display: inline;
   position: relative;
+  padding-bottom: 10px;
 }
 
 .header::after {
   content: "";
   position: absolute;
+  bottom: 0;
   left: 0;
-  right: 0;
-  bottom: -10px;
   width: 150px;
-  display: block;
   border-top: 2px solid;
 }
 
 .paragraph {
   font-family: schnebel-sans-me, sans-serif;
   text-align: justify;
-  margin-top: 40px;
+  padding-top: 25px;
 }
 
 .navbar {
   background: white;
-  position: sticky;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .navbar::after {
@@ -32,71 +33,95 @@
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100vw;
-  display: block;
   border-top: 1px solid #3c9283;
 }
 
 .navbar__logo {
-  margin: 10px;
+  padding: 10px;
 }
 
 .greeting {
-  min-height: 100vh;
+  position: relative;
+  min-height: calc(100vh - 55px);
+  padding-top: 55px;
   background-image: url(images/mountains.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-.greeting::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 187px;
-  height: 201px;
-  display: block;
-  background-image: url(images/Marta.png);
+  z-index: -100;
 }
 
 .greeting::before {
   content: "";
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 186px;
-  height: 129px;
-  display: block;
   background-image: url(images/logoBig.png);
+  z-index: -1;
+  width: 100%;
+  height: 50%;
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: center bottom 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .greeting__text {
-  margin: 20px;
+  padding: 40px 20px 40px 20px;
+}
+
+.greeting__header {
+  margin: 0;
+}
+
+.greeting__name {
+  font-weight: 600;
+  letter-spacing: 12px;
+}
+
+.greeting__surname {
+  font-weight: 400;
+  letter-spacing: 9px;
+}
+
+.greeting__paragraph {
+  margin: 0;
 }
 
 .introduction {
   min-height: 100vh;
+  position: relative;
+  background-image: url(images/aboutMeBackground.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -100;
 }
 
 .introduction::after {
   content: "";
   position: absolute;
+  background-image: url(images/Marta.png);
+  z-index: -1;
+  width: 100%;
+  height: 50%;
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: center bottom 0;
   left: 0;
   right: 0;
-  display: block;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url(images/courts.png);
-  width: 230px;
-  height: 198px;
+  bottom: 0;
 }
 
 .introduction__text {
-  margin: 20px;
+  padding: 20px;
+}
+
+.introduction__header {
+  margin: 0;
 }
 
 .introduction__paragraph {
   font-size: 0.9rem;
+  margin: 0;
 }
 
 .introduction__readMore {
@@ -109,7 +134,6 @@
 
 .fields {
   position: relative;
-  padding: 20px 0;
   color: #f7f7f7;
 }
 
@@ -128,18 +152,23 @@
 }
 
 .fields__header {
-  margin-left: 20px;
+  margin: 0;
+  padding: 20px 20px 10px 20px;
+}
+
+.fields__header::after {
+  left: 20px;
 }
 
 .fields__content {
-  padding: 0;
+  padding: 0 0 20px 0;
+  margin: 0;
 }
 
 .fields__box {
   list-style: none;
   text-align: center;
-  margin-top: 60px;
-  margin-bottom: 70px;
+  padding-top: 60px;
 }
 
 .fields__name {
@@ -147,18 +176,19 @@
   line-height: 29.2px;
   letter-spacing: 4.75px;
   position: relative;
+  margin: 0;
+  padding-bottom: 10px;
 }
 
 .fields__name::after {
   content: "";
   position: absolute;
-  bottom: -15px;
+  bottom: 0;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
   width: 100px;
-  display: block;
   border-top: 1px solid #3c9283;
 }
 
@@ -167,18 +197,29 @@
 }
 
 .strengths {
-  margin: 20px;
+  background-image: url(images/strengthsBackground.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.strengths__header {
+  margin: 0;
+  padding: 20px 20px 10px 20px;
+}
+
+.strengths__header::after {
+  left: 20px;
 }
 
 .strengths__content {
-  padding: 0;
+  margin: 0;
+  padding: 0 0 20px 0;
 }
 
 .strengths__box {
   list-style: none;
   text-align: center;
-  margin-top: 60px;
-  margin-bottom: 70px;
+  padding-top: 60px;
 }
 
 .strengths__name {
@@ -186,12 +227,14 @@
   line-height: 22.2px;
   letter-spacing: 4.75px;
   position: relative;
+  margin: 0;
+  padding: 10px 20px;
 }
 
 .strengths__name::after {
   content: "";
   position: absolute;
-  bottom: -15px;
+  bottom: 0;
   left: 0;
   right: 0;
   margin-left: auto;
@@ -203,7 +246,8 @@
 
 .strengths__paragraph {
   font-family: "Roboto", sans-serif;
-  margin-top: 40px;
+  margin: 0;
+  padding: 20px 20px 0 20px;
   letter-spacing: 0.34px;
 }
 
@@ -213,6 +257,7 @@
 
 .contact {
   position: relative;
+  color: #f7f7f7;
 }
 
 .contact::after {
@@ -230,20 +275,22 @@
 }
 
 .contact__content {
-  margin-top: 40px;
-  padding: 0;
-  margin-bottom: 0;
+  margin: 0;
+  padding-left: 0;
 }
 
 .contact__header {
-  margin-left: 20px;
-  color: #f7f7f7;
+  margin: 0;
+  padding: 20px 20px 10px 20px;
+}
+
+.contact__header::after {
+  left: 20px;
 }
 
 .contact__box {
   text-align: center;
-  margin-top: 60px;
-  margin-bottom: 40px;
+  padding-top: 60px;
   list-style: none;
 }
 
@@ -271,4 +318,6 @@
 .footer__text {
   color: #7d7d7d;
   font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 10px 0;
 }
