--- a/main.scss
+++ b/main.scss
@@ -4,17 +4,15 @@ $secondFont: 'Roboto', sans-serif;
 
 .header {
     font-family: $firstFont;
-    display: inline;
     position: relative;
+    padding-bottom: 10px;
 
     &::after {
         content: "";
         position: absolute;
+        bottom: 0;
         left: 0;
-        right: 0;
-        bottom: -10px; 
-        width: 150px;  
-        display: block;
+        width: 150px;
         border-top: 2px solid;
     }
 }
@@ -22,87 +20,106 @@ $secondFont: 'Roboto', sans-serif;
 .paragraph {
     font-family: $firstFont;
     text-align: justify;
-    margin-top: 40px;
+    padding-top: 25px;
 }
 
 .navbar {
-    
     background: white;
-    position: sticky;   
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
     
         &::after {
             content: "";
-            position: absolute;  
+            position: absolute;
             bottom: 0;
             left: 0;
-            right: 0;  
-            width: 100vw;  
-            display: block;
+            right: 0;
             border-top: 1px solid #3c9283;
-        }
+        }        
     
     &__logo {
-        margin: 10px;
-    }  
-}
+        padding: 10px;
+    }
+    }
 
 .greeting {
-    min-height: 100vh;
+    position: relative;
+    min-height: calc(100vh - 55px);
+    padding-top: 55px;
     background-image: url(images/mountains.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-
-    &::after {
-        content: "";
-        position: absolute;  
-        bottom: 0;
-        right: 0;  
-        width: 187px;
-        height: 201px;
-        display: block;
-        background-image: url(images/Marta.png);         
-    } 
+    z-index: -100;
+    
 
     &::before {
         content: "";
-        position: absolute;  
-        bottom: 0;
-        left: 0;  
-        width: 186px;
-        height: 129px;
-        display: block;
-        background-image: url(images/logoBig.png);         
-    }       
-
+        position: absolute;        
+        background-image: url(images/logoBig.png);
+        z-index: -1;
+        width: 100%;
+        height: 50%;
+        background-repeat: no-repeat;
+        background-size: 70%;
+        background-position: center bottom 0;
+        left: 0;
+        right: 0;
+        bottom: 0;   
+    }
         &__text {
-            margin: 20px;
-        }           
+            padding: 40px 20px 40px 20px;
+        }
+        &__header {
+            margin: 0;
+        }
+        &__name {
+            font-weight: 600;
+            letter-spacing: 12px;
+        }
+        &__surname {
+            font-weight: 400;
+            letter-spacing: 9px;
+        }
+        &__paragraph {
+            margin: 0;
+        }
 }
 
 .introduction {
     min-height: 100vh;
-
+    position: relative;
+    background-image: url(images/aboutMeBackground.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -100;
+    
     &::after {
         content: "";
-        position: absolute;  
-        left: 0; 
-        right: 0; 
-        display: block;
-        background-size: cover;
+        position: absolute;        
+        background-image: url(images/Marta.png);
+        z-index: -1;
+        width: 100%;
+        height: 50%;
         background-repeat: no-repeat;
-        background-image: url(images/courts.png);
-        width: 230px;
-        height: 198px;
+        background-size: 70%;
+        background-position: center bottom 0;
+        left: 0;
+        right: 0;
+        bottom: 0;  
     }
 
     &__text {
-        margin: 20px;
+        padding: 20px;
     }
-
+    &__header {
+        margin: 0;
+    }
     &__paragraph {
         font-size: 0.9rem;
+        margin: 0;
     }
-
     &__readMore {
         text-align: right;
         width: auto;
@@ -112,9 +129,8 @@ $secondFont: 'Roboto', sans-serif;
     } 
 }
 
-.fields { 
-    position: relative;
-    padding: 20px 0;
+.fields {
+    position: relative;    
     color: #f7f7f7;
 
     &::after {
@@ -131,33 +147,39 @@ $secondFont: 'Roboto', sans-serif;
         z-index: -1;
     }
     &__header {
-        margin-left: 20px;
+        margin: 0;
+        padding: 20px 20px 10px 20px;
     }
+    &__header::after {
+        left: 20px;
+    }
+        
     &__content {
-        padding: 0;
+        padding: 0 0 20px 0;
+        margin: 0;
     }
     &__box {
         list-style: none;
         text-align: center;
-        margin-top: 60px;
-        margin-bottom: 70px;
+        padding-top: 60px;
     }
     &__name {
         font-family: $secondFont;
         line-height: 29.2px;
         letter-spacing: 4.75px; 
         position: relative;
+        margin: 0;
+        padding-bottom: 10px;
     }
         &__name::after {
             content: "";
             position: absolute;  
-            bottom: -15px;
+            bottom: 0;
             left: 0; 
             right: 0; 
             margin-left: auto; 
             margin-right: auto; 
             width: 100px;  
-            display: block;
             border-top: 1px solid #3c9283;
         }
     &__icon {
@@ -166,27 +188,39 @@ $secondFont: 'Roboto', sans-serif;
 }
 
 .strengths{
-    margin: 20px;
-    
+    background-image: url(images/strengthsBackground.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    &__header {
+        margin: 0;
+        padding: 20px 20px 10px 20px;
+    }
+    &__header::after {
+        left: 20px;
+    }
+        
     &__content {
-        padding: 0;
+        margin: 0;
+        padding: 0 0 20px 0;
     }
     &__box {
         list-style: none;
         text-align: center;
-        margin-top: 60px;
-        margin-bottom: 70px;
+        padding-top: 60px;
     }
     &__name {
         font-family: $secondFont;
         line-height: 22.2px;
         letter-spacing: 4.75px; 
         position: relative;
+        margin: 0;
+        padding: 10px 20px;
     }
         &__name::after {
             content: "";
             position: absolute;  
-            bottom: -15px;
+            bottom: 0;
             left: 0; 
             right: 0; 
             margin-left: auto; 
@@ -197,7 +231,8 @@ $secondFont: 'Roboto', sans-serif;
         }
     &__paragraph {
         font-family: $secondFont;
-        margin-top: 40px;
+        margin: 0;
+        padding: 20px 20px 0 20px;
         letter-spacing: 0.34px;
     }    
     &__icon {
@@ -207,6 +242,8 @@ $secondFont: 'Roboto', sans-serif;
 
 .contact {
     position: relative;
+    color: #f7f7f7;
+
     &::after {
         content: "";
         position: absolute;  
@@ -221,18 +258,19 @@ $secondFont: 'Roboto', sans-serif;
         z-index: -1;
     }
         &__content {
-            margin-top: 40px;
-            padding: 0;
-            margin-bottom: 0;
+            margin: 0;
+            padding-left: 0;
         }
         &__header {
-            margin-left: 20px;
-            color: #f7f7f7;
+            margin: 0;
+            padding: 20px 20px 10px 20px;
+        }
+        &__header::after {
+            left: 20px;
         }
         &__box {
             text-align: center;
-            margin-top: 60px;
-            margin-bottom: 40px;
+            padding-top: 60px;
             list-style: none;
         }
         &__data {
@@ -256,5 +294,7 @@ $secondFont: 'Roboto', sans-serif;
         &__text {
             color: #7d7d7d;
             font-family: $secondFont;
+            margin: 0;
+            padding: 10px 0;
         }
 }
