--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+.navigation {
+  display: none;
+}
+
 .header {
   font-family: schnebel-sans-me, sans-serif;
   position: relative;
@@ -23,7 +27,7 @@
   background: white;
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 1000;
 }
 
@@ -240,7 +244,6 @@
   margin-left: auto;
   margin-right: auto;
   width: 100px;
-  display: block;
   border-top: 1px solid #3c9283;
 }
 
