--- a/main.scss
+++ b/main.scss
@@ -2,6 +2,11 @@ $green: #3c9283;
 $firstFont: schnebel-sans-me, sans-serif;
 $secondFont: 'Roboto', sans-serif;
 
+
+.navigation {
+    display: none;
+}
+
 .header {
     font-family: $firstFont;
     position: relative;
@@ -27,7 +32,7 @@ $secondFont: 'Roboto', sans-serif;
     background: white;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 1000;
     
         &::after {
@@ -226,7 +231,6 @@ $secondFont: 'Roboto', sans-serif;
             margin-left: auto; 
             margin-right: auto; 
             width: 100px;  
-            display: block;
             border-top: 1px solid #3c9283;
         }
     &__paragraph {
