--- a/main.css
+++ b/main.css
@@ -21,13 +21,14 @@
   font-family: schnebel-sans-me, sans-serif;
   text-align: justify;
   padding-top: 25px;
+  line-height: 1.5em;
 }
 
 .navbar {
   background: white;
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 1000;
 }
 
@@ -42,6 +43,31 @@
 
 .navbar__logo {
   padding: 10px;
+  width: 42px;
+  height: 30px;
+}
+
+.navbar__phonePopup {
+  position: absolute;
+  width: 134px;
+  height: 39px;
+  right: 0;
+  top: 50%;
+  bottom: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.navbar__phone {
+  position: absolute;
+  right: 0;
+  top: 34%;
+  bottom: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-right: 6px;
+  color: white;
+  font-family: schnebel-sans-me, sans-serif;
 }
 
 .greeting {
@@ -60,7 +86,7 @@
   background-image: url(images/logoBig.png);
   z-index: -1;
   width: 100%;
-  height: 50%;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: 70%;
   background-position: center bottom 0;
@@ -75,16 +101,13 @@
 
 .greeting__header {
   margin: 0;
+  font-weight: 400;
+  letter-spacing: 0.48em;
 }
 
 .greeting__name {
   font-weight: 600;
-  letter-spacing: 12px;
-}
-
-.greeting__surname {
-  font-weight: 400;
-  letter-spacing: 9px;
+  letter-spacing: 0.6em;
 }
 
 .greeting__paragraph {
@@ -93,6 +116,7 @@
 
 .introduction {
   min-height: 100vh;
+  height: 1000px;
   position: relative;
   background-image: url(images/aboutMeBackground.jpg);
   background-repeat: no-repeat;
@@ -106,9 +130,9 @@
   background-image: url(images/Marta.png);
   z-index: -1;
   width: 100%;
-  height: 50%;
+  height: 100%;
   background-repeat: no-repeat;
-  background-size: 70%;
+  background-size: 50%;
   background-position: center bottom 0;
   left: 0;
   right: 0;
@@ -124,7 +148,6 @@
 }
 
 .introduction__paragraph {
-  font-size: 0.9rem;
   margin: 0;
 }
 
@@ -132,7 +155,6 @@
   text-align: right;
   width: auto;
   font-family: schnebel-sans-me, sans-serif;
-  font-size: 0.9rem;
   padding: 5px;
 }
 
@@ -165,23 +187,24 @@
 }
 
 .fields__content {
-  padding: 0 0 20px 0;
+  padding: 0 0 5em 0;
   margin: 0;
 }
 
 .fields__box {
   list-style: none;
   text-align: center;
-  padding-top: 60px;
+  padding-top: 5em;
 }
 
 .fields__name {
   font-family: "Roboto", sans-serif;
-  line-height: 29.2px;
-  letter-spacing: 4.75px;
+  font-weight: 600;
+  line-height: 1.5em;
+  letter-spacing: 0.2em;
   position: relative;
   margin: 0;
-  padding-bottom: 10px;
+  padding: 1.5em;
 }
 
 .fields__name::after {
@@ -200,6 +223,10 @@
   max-width: 180px;
 }
 
+.fields__criminal::after {
+  display: none;
+}
+
 .strengths {
   background-image: url(images/strengthsBackground.jpg);
   background-repeat: no-repeat;
@@ -208,31 +235,32 @@
 
 .strengths__header {
   margin: 0;
-  padding: 20px 20px 10px 20px;
+  padding: 1em 1em 0.5em 1em;
 }
 
 .strengths__header::after {
-  left: 20px;
+  left: 1em;
 }
 
 .strengths__content {
   margin: 0;
-  padding: 0 0 20px 0;
+  padding: 0 0 5em 0;
 }
 
 .strengths__box {
   list-style: none;
   text-align: center;
-  padding-top: 60px;
+  padding-top: 5em;
 }
 
 .strengths__name {
   font-family: "Roboto", sans-serif;
-  line-height: 22.2px;
-  letter-spacing: 4.75px;
+  font-weight: 600;
+  letter-spacing: 0.2em;
   position: relative;
   margin: 0;
-  padding: 10px 20px;
+  padding: 1.5em;
+  line-height: 1.5em;
 }
 
 .strengths__name::after {
@@ -250,11 +278,12 @@
 .strengths__paragraph {
   font-family: "Roboto", sans-serif;
   margin: 0;
-  padding: 20px 20px 0 20px;
-  letter-spacing: 0.34px;
+  padding: 1.5em;
+  letter-spacing: 0.04em;
+  line-height: 1.5em;
 }
 
-.strengths__icon {
+.strengths__hand {
   max-width: 180px;
 }
 
@@ -300,11 +329,27 @@
 .contact__data {
   font-family: schnebel-sans-me, sans-serif;
   color: #b3b3b3;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.04em;
+  line-height: 1.5em;
+  font-size: 1em;
 }
 
-.contact__map {
-  width: 100vw;
+.contact__paragraph {
+  font-family: "Roboto", sans-serif;
+}
+
+.contact__paragraph-big {
+  font-weight: 600;
+}
+
+.contact a {
+  background-color: transparent;
+  display: block;
+  height: 100vh;
+  width: 100%;
+  background-image: url(images/mapapin.png);
+  background-size: cover;
+  background-position: center center;
 }
 
 .footer {
@@ -315,7 +360,7 @@
 }
 
 .footer__content {
-  width: 100vw;
+  width: 100%;
 }
 
 .footer__text {
