--- a/main.scss
+++ b/main.scss
@@ -25,14 +25,15 @@ $secondFont: 'Roboto', sans-serif;
 .paragraph {
     font-family: $firstFont;
     text-align: justify;
-    padding-top: 25px;
+    padding-top: 25px;    
+    line-height: 1.5em;
 }
 
 .navbar {
     background: white;
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 1000;
     
         &::after {
@@ -46,6 +47,29 @@ $secondFont: 'Roboto', sans-serif;
     
     &__logo {
         padding: 10px;
+        width: 42px;
+        height: 30px;
+    }
+    &__phonePopup {
+        position: absolute;
+        width: 134px;
+        height: 39px;
+        right: 0;
+        top: 50%; 
+        bottom: 50%; 
+        margin-top: auto; 
+        margin-bottom: auto;
+    }
+    &__phone {
+        position: absolute;
+        right: 0;
+        top: 34%; 
+        bottom: 50%; 
+        margin-top: auto; 
+        margin-bottom: auto;
+        padding-right: 6px;
+        color: white;
+        font-family: $firstFont;
     }
     }
 
@@ -65,7 +89,7 @@ $secondFont: 'Roboto', sans-serif;
         background-image: url(images/logoBig.png);
         z-index: -1;
         width: 100%;
-        height: 50%;
+        height: 100%;
         background-repeat: no-repeat;
         background-size: 70%;
         background-position: center bottom 0;
@@ -78,14 +102,12 @@ $secondFont: 'Roboto', sans-serif;
         }
         &__header {
             margin: 0;
+            font-weight: 400;
+            letter-spacing: 0.48em;
         }
         &__name {
             font-weight: 600;
-            letter-spacing: 12px;
-        }
-        &__surname {
-            font-weight: 400;
-            letter-spacing: 9px;
+            letter-spacing: 0.6em;
         }
         &__paragraph {
             margin: 0;
@@ -94,6 +116,7 @@ $secondFont: 'Roboto', sans-serif;
 
 .introduction {
     min-height: 100vh;
+    height: 1000px;
     position: relative;
     background-image: url(images/aboutMeBackground.jpg);
     background-repeat: no-repeat;
@@ -102,17 +125,17 @@ $secondFont: 'Roboto', sans-serif;
     
     &::after {
         content: "";
-        position: absolute;        
+        position: absolute;
         background-image: url(images/Marta.png);
         z-index: -1;
         width: 100%;
-        height: 50%;
+        height: 100%;
         background-repeat: no-repeat;
-        background-size: 70%;
+        background-size: 50%;
         background-position: center bottom 0;
         left: 0;
         right: 0;
-        bottom: 0;  
+        bottom: 0;
     }
 
     &__text {
@@ -122,14 +145,12 @@ $secondFont: 'Roboto', sans-serif;
         margin: 0;
     }
     &__paragraph {
-        font-size: 0.9rem;
         margin: 0;
     }
     &__readMore {
         text-align: right;
         width: auto;
         font-family: $firstFont;
-        font-size: 0.9rem;
         padding: 5px;
     } 
 }
@@ -160,21 +181,22 @@ $secondFont: 'Roboto', sans-serif;
     }
         
     &__content {
-        padding: 0 0 20px 0;
+        padding: 0 0 5em 0;
         margin: 0;
     }
     &__box {
         list-style: none;
         text-align: center;
-        padding-top: 60px;
+        padding-top: 5em;
     }
     &__name {
         font-family: $secondFont;
-        line-height: 29.2px;
-        letter-spacing: 4.75px; 
+        font-weight: 600;
+        line-height: 1.5em;
+        letter-spacing: 0.2em;
         position: relative;
         margin: 0;
-        padding-bottom: 10px;
+        padding: 1.5em;
     }
         &__name::after {
             content: "";
@@ -190,6 +212,9 @@ $secondFont: 'Roboto', sans-serif;
     &__icon {
         max-width: 180px;
     }    
+    &__criminal::after {
+        display: none;
+    }
 }
 
 .strengths{
@@ -199,28 +224,32 @@ $secondFont: 'Roboto', sans-serif;
 
     &__header {
         margin: 0;
-        padding: 20px 20px 10px 20px;
+        padding: 1em 1em 0.5em 1em;
     }
+
     &__header::after {
-        left: 20px;
+        left: 1em;
     }
         
     &__content {
         margin: 0;
-        padding: 0 0 20px 0;
+        padding: 0 0 5em 0;
     }
+
     &__box {
         list-style: none;
         text-align: center;
-        padding-top: 60px;
+        padding-top: 5em;
     }
+
     &__name {
         font-family: $secondFont;
-        line-height: 22.2px;
-        letter-spacing: 4.75px; 
+        font-weight: 600;
+        letter-spacing: 0.2em;
         position: relative;
         margin: 0;
-        padding: 10px 20px;
+        padding: 1.5em;
+        line-height: 1.5em;
     }
         &__name::after {
             content: "";
@@ -233,13 +262,15 @@ $secondFont: 'Roboto', sans-serif;
             width: 100px;  
             border-top: 1px solid #3c9283;
         }
+
     &__paragraph {
         font-family: $secondFont;
         margin: 0;
-        padding: 20px 20px 0 20px;
-        letter-spacing: 0.34px;
+        padding: 1.5em;
+        letter-spacing: 0.04em;
+        line-height: 1.5em;
     }    
-    &__icon {
+    &__hand {
         max-width: 180px;
     }   
 }
@@ -280,10 +311,24 @@ $secondFont: 'Roboto', sans-serif;
         &__data {
             font-family: $firstFont;
             color: #b3b3b3;
-            letter-spacing: 0.8px;
+            letter-spacing: 0.04em;
+            line-height: 1.5em;
+            font-size: 1em;
         }
-        &__map {
-            width: 100vw;
+        &__paragraph {
+            font-family: $secondFont;
+        }
+        &__paragraph-big{
+            font-weight: 600;
+        }
+        a {
+            background-color: transparent;
+            display: block;
+            height: 100vh;
+            width: 100%;
+            background-image: url(images/mapapin.png);
+            background-size: cover;
+            background-position: center center;
         }
 }
 
@@ -293,7 +338,7 @@ $secondFont: 'Roboto', sans-serif;
     display: flex;
     justify-content: space-between;
         &__content {
-            width: 100vw;
+            width: 100%;
         }
         &__text {
             color: #7d7d7d;
