--- a/main.scss
+++ b/main.scss
@@ -70,6 +70,7 @@ $secondFont: 'Roboto', sans-serif;
         padding-right: 6px;
         color: white;
         font-family: $firstFont;
+        text-decoration: none;
     }
     }
 
@@ -116,14 +117,14 @@ $secondFont: 'Roboto', sans-serif;
 
 .introduction {
     min-height: 100vh;
-    height: 1000px;
+    height: 950px;
     position: relative;
     background-image: url(images/aboutMeBackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -100;
     
-    &::after {
+    &::before {
         content: "";
         position: absolute;
         background-image: url(images/Marta.png);
@@ -131,11 +132,12 @@ $secondFont: 'Roboto', sans-serif;
         width: 100%;
         height: 100%;
         background-repeat: no-repeat;
-        background-size: 50%;
-        background-position: center bottom 0;
+        background-size: 60%;
+        opacity: 90%;
+        background-position: center top 105px;
         left: 0;
         right: 0;
-        bottom: 0;
+        top: 0;
     }
 
     &__text {
@@ -145,7 +147,9 @@ $secondFont: 'Roboto', sans-serif;
         margin: 0;
     }
     &__paragraph {
-        margin: 0;
+        margin: 0;        
+        padding-top: 330px;
+        float: right;
     }
     &__readMore {
         text-align: right;
@@ -295,6 +299,7 @@ $secondFont: 'Roboto', sans-serif;
         &__content {
             margin: 0;
             padding-left: 0;
+            padding-bottom: 60px;
         }
         &__header {
             margin: 0;
@@ -321,7 +326,7 @@ $secondFont: 'Roboto', sans-serif;
         &__paragraph-big{
             font-weight: 600;
         }
-        a {
+        &__link {
             background-color: transparent;
             display: block;
             height: 100vh;
@@ -329,6 +334,11 @@ $secondFont: 'Roboto', sans-serif;
             background-image: url(images/mapapin.png);
             background-size: cover;
             background-position: center center;
+            text-decoration: none;
+        }
+        a {
+            text-decoration: none;
+            color: #b3b3b3;
         }
 }
 
