--- a/main.scss
+++ b/main.scss
@@ -2,9 +2,23 @@ $green: #3c9283;
 $firstFont: schnebel-sans-me, sans-serif;
 $secondFont: 'Roboto', sans-serif;
 
-
 .navigation {
     display: none;
+    animation-name: navigation-animation;
+    animation-duration: 3s;
+    animation-timing-function: ease;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    }
+    @keyframes navigation-animation {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 100;
+    }
 }
 
 .header {
@@ -54,23 +68,13 @@ $secondFont: 'Roboto', sans-serif;
         position: absolute;
         width: 134px;
         height: 39px;
-        right: 0;
+        right: -295px;
         top: 50%; 
         bottom: 50%; 
         margin-top: auto; 
         margin-bottom: auto;
-    }
-    &__phone {
-        position: absolute;
-        right: 0;
-        top: 34%; 
-        bottom: 50%; 
-        margin-top: auto; 
-        margin-bottom: auto;
-        padding-right: 6px;
-        color: white;
-        font-family: $firstFont;
-        text-decoration: none;
+        background-image: url(images/phonenum.png);
+        background-size: 100%;
     }
     }
 
@@ -96,8 +100,30 @@ $secondFont: 'Roboto', sans-serif;
         background-position: center bottom 0;
         left: 0;
         right: 0;
-        bottom: 0;   
+        bottom: 0;  
+        color: #3079ed;
+        animation-name: logo-animation;
+        animation-delay: 60s;
+        animation-duration: 3s;
+        animation-timing-function: ease;
+        animation-delay: 0s;
+        animation-iteration-count: 1;
+        animation-direction: normal;
+        
+        @keyframes logo-animation {
+            0%{
+            opacity: 0;
+            -webkit-transform: scale3d(0.3, 0.3, 0.3);
+            transform: scale3d(0.3, 0.3, 0.3);
+            }
+            60%{
+            opacity: 1;
+            -webkit-transform: scale3d(1,1,1);
+            transform: scale3d(1,1,1);
+            }
+        }
     }
+    
         &__text {
             padding: 40px 20px 40px 20px;
         }
@@ -127,7 +153,7 @@ $secondFont: 'Roboto', sans-serif;
     &::before {
         content: "";
         position: absolute;
-        background-image: url(images/Marta.png);
+        background-image: url(images/MartaB.png);
         z-index: -1;
         width: 100%;
         height: 100%;
@@ -150,6 +176,7 @@ $secondFont: 'Roboto', sans-serif;
         margin: 0;        
         padding-top: 330px;
         float: right;
+        font-size: 1em;
     }
     &__readMore {
         text-align: right;
@@ -215,6 +242,24 @@ $secondFont: 'Roboto', sans-serif;
         }
     &__icon {
         max-width: 180px;
+        animation-name: angry-animation;
+        animation-duration: 3s;
+        animation-timing-function: ease;
+        animation-delay: 0s;
+        animation-iteration-count: 1;
+        animation-direction: normal;
+        @keyframes angry-animation {
+            0%{
+              opacity: 0;
+              -webkit-transform: scale3d(0.3, 0.3, 0.3);
+              transform: scale3d(0.3, 0.3, 0.3);
+            }
+            60%{
+              opacity: 1;
+              -webkit-transform: scale3d(1,1,1);
+              transform: scale3d(1,1,1);
+            }
+          }
     }    
     &__criminal::after {
         display: none;
@@ -273,7 +318,27 @@ $secondFont: 'Roboto', sans-serif;
         padding: 1.5em;
         letter-spacing: 0.04em;
         line-height: 1.5em;
-    }    
+    } 
+    &__icon {
+        animation-name: angry-animation;
+        animation-duration: 3s;
+        animation-timing-function: ease;
+        animation-delay: 0s;
+        animation-iteration-count: 1;
+        animation-direction: normal;
+        @keyframes angry-animation {
+            0%{
+              opacity: 0;
+              -webkit-transform: scale3d(0.3, 0.3, 0.3);
+              transform: scale3d(0.3, 0.3, 0.3);
+            }
+            60%{
+              opacity: 1;
+              -webkit-transform: scale3d(1,1,1);
+              transform: scale3d(1,1,1);
+            }
+          }
+    }
     &__hand {
         max-width: 180px;
     }   
