--- a/responsive.css
+++ b/responsive.css
@@ -143,24 +143,40 @@
 
     /* INTRODUCTION */
     .introduction__text {
-        padding-top: 70px;
-        font-size: 1.5em;
-        padding-left: 400px;
+        padding-top: 85px;
+        padding-left: 300px;
+    }
+
+    .introduction__header {
+        font-size: 2.2em;
     }
 
     .introduction__paragraph {
         padding-top: 85px;
-        /* padding-left: 550px; */
         padding-right: 890px;
         width: 40%;        
-        font-size: 0.9em;
+        font-size: 1.1em;
     }
 
     .introduction::before {
         display: none;
-        /* background-size: 40%;
-        opacity: 90%;
-        background-position: right 50px bottom; */
+    }
+
+    .introduction::after {
+        content: "";
+        position: absolute;
+        background-image: url(images/IMG.png);
+        z-index: 100;
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-size: 50%;
+        opacity: 100%;
+        background-position: right 40px bottom 80%;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
     }
 
     /* FIELDS, STRENGTHS */
@@ -176,7 +192,8 @@
     .fields__header,
     .strengths__header {
         padding-left: 300px;
-        padding-top: 40px;
+        padding-top: 85px;
+        font-size: 2.2em;
     }
 
     .fields__header::after,
@@ -188,9 +205,10 @@
     .strengths__content {
         display: flex;
         flex-wrap: wrap;
-        padding-left: 300px;
+        padding-left: 350px;
+        padding-right: 50px;
         padding-bottom: 0;
-        min-height: calc(100vh - 81px);
+        min-height: calc(100vh - 250px);
         align-content: center;
     }
 
@@ -206,6 +224,15 @@
         height: 30%;
     }
 
+    .fields__name,
+    .strengths__name {
+        font-size: 1.5em;
+    }
+
+    .strengths__paragraph {
+        font-size: 1.1em;
+    }
+
      /* CONTACT */
     .contact {
         height: 100vh;
@@ -213,6 +240,11 @@
 
     .contact {
         width: 100vw;
+    }
+
+    .contact__header {
+        font-size: 2.2em;
+        padding-top: 85px;
     }
 
     .contact__content {
