--- a/main.scss
+++ b/main.scss
@@ -33,7 +33,11 @@ $secondFont: 'Roboto', sans-serif;
         left: 0;
         width: 150px;
         border-top: 2px solid;
+        -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
     }
+
 }
 
 .paragraph {
@@ -44,11 +48,19 @@ $secondFont: 'Roboto', sans-serif;
 }
 
 .navbar {
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 0 0px 5px 0px rgba(0,0,0,0.35);
+    }
+
+.navbar {
     background: white;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1000;
+    // max-width: 100vw;
+    // overflow: hidden;
     
         &::after {
             content: "";
@@ -75,6 +87,7 @@ $secondFont: 'Roboto', sans-serif;
         margin-bottom: auto;
         background-image: url(images/phonenum.png);
         background-size: 100%;
+        background-repeat: no-repeat;
     }
     
     &__phonePopup:hover {
@@ -90,6 +103,8 @@ $secondFont: 'Roboto', sans-serif;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -100;
+    // max-width: 100vw;
+    // overflow: hidden;
     
 
     &::before {
@@ -101,10 +116,11 @@ $secondFont: 'Roboto', sans-serif;
         height: 100%;
         background-repeat: no-repeat;
         background-size: 70%;
-        background-position: center bottom 0;
-        left: 0;
-        right: 0;
-        bottom: 0;  
+        background-position: center bottom;
+        // left: 0;
+        // right: 0;
+        // bottom: 0; 
+        // margin: 0 auto; 
         animation-name: logo-animation;
         animation-delay: 60s;
         animation-duration: 3s;
@@ -152,6 +168,8 @@ $secondFont: 'Roboto', sans-serif;
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -100;
+    // max-width: 100vw;
+    // overflow: hidden;
     
     &::before {
         content: "";
@@ -191,6 +209,8 @@ $secondFont: 'Roboto', sans-serif;
 .fields {
     position: relative;    
     color: #f7f7f7;
+    // max-width: 100vw;
+    // overflow: hidden;
 
     &::after {
         content: "";
@@ -272,6 +292,8 @@ $secondFont: 'Roboto', sans-serif;
     background-image: url(images/strengthsBackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    // max-width: 100vw;
+    // overflow: hidden;
 
     &__header {
         margin: 0;
@@ -349,6 +371,8 @@ $secondFont: 'Roboto', sans-serif;
 .contact {
     position: relative;
     color: #f7f7f7;
+    // max-width: 100vw;
+    // overflow: hidden;
 
     &::after {
         content: "";
@@ -410,17 +434,15 @@ $secondFont: 'Roboto', sans-serif;
 }
 
 .footer {
-    text-align: center;
     background-color: #050505;
-    display: flex;
-    justify-content: space-between;
         &__content {
             width: 100%;
+            padding: 10px 0;
+            position: relative;
         }
         &__text {
             color: #7d7d7d;
             font-family: $secondFont;
             margin: 0;
-            padding: 10px 0;
         }
 }
